# survey

./: .gitignore  README.MD
back/: Cargo.toml
back/src/: main.rs  mongo.rs  survey.rs
front/src/: index.html  new_survey.html
front/src/js/: index.js
src/front/: index.html
src/front/js/: index.js  jquery-form-serializer.js
