[package]
name = "survey"
version = "0.1.0"
authors = ["C.Solovev <constantine.solovev@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.9"
actix-web = "3"
actix-cors = "0.5.4"
serde = "1"

env_logger = "0.8"
log = "0.4"

mongodb = "1.1.1"
wither="0.9.0-alpha.2"
wither_derive = "0.9.0-alpha.2"
anyhow = "1.0"
